--- a/logicle/styles/globals.css
+++ b/logicle/styles/globals.css
@@ -10,8 +10,11 @@
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
+
     --primary: #4260ff;
     --primary-foreground: #f8faff;
+    --primary-hover: #3955e8;
+
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
@@ -34,7 +37,6 @@
     --accent_color: #d8e8ff;
     --secondary_color: #f8faff;
     --secondary_text_color: #bebcc2;
-    --primary_color_hover: #3955e8;
     --alert: #e84136;
     --alert_color: #e84136;
     --secondary_color_hover: 0 0% 96.1%;
