--- a/logicle/styles/globals.css
+++ b/logicle/styles/globals.css
@@ -6,38 +6,40 @@
   :root {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
+
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
+
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 72.2% 50.6%;
-    --primary-foreground: 0 85.7% 97.3%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
+
+    --primary: #4260ff;
+    --primary-foreground: #f8faff;
+    --primary-hover: #3955e8;
+
+    --secondary: #f8faff;
+    --secondary-foreground: #11282d;
+    --secondary-hover: #f5f5f5;
+
     --muted: 0 0% 96.1%;
     --muted-foreground: 0 0% 45.1%;
+
     --accent: 0 0% 96.1%;
     --accent-foreground: 0 0% 9%;
+
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
+
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
     --ring: 0 72.2% 50.6%;
     --radius: 0.5rem;
     --dialog-background: 0 0% 100%;
     --sidebar: 0 0% 95%;
-    --user-message: 235 11% 98%;
-    --assistant-message: 233 11% 96%;
 
-    --primary_text_color: #11282d;
-    --primary_color: #4260ff;
     --accent_color: #d8e8ff;
-    --secondary_color: #f8faff;
-    --secondary_text_color: #bebcc2;
-    --primary_color_hover: #3955e8;
     --alert: #e84136;
     --alert_color: #e84136;
-    --secondary_color_hover: 0 0% 96.1%;
 
     --thread-content-max-width: 52rem;
   }
@@ -129,14 +131,6 @@ div[role='alertdialog'] {
 
 .sidebar {
   background-color: hsl(var(--sidebar));
-}
-
-.bg-user-message {
-  background-color: hsl(var(--user-message));
-}
-
-.bg-assistant-message {
-  background-color: hsl(var(--assistant-message));
 }
 
 [type='text'],
