--- a/logicle/styles/globals.css
+++ b/logicle/styles/globals.css
@@ -1,3 +1,5 @@
+@import 'react-date-range/dist/styles.css';
+@import 'react-date-range/dist/theme/default.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
